syntax = "proto3";

package auth_service;
option go_package = "gitlab.com/media_park/bnpl-mono-repo/generated/auth_service";
import "validate/validate.proto";

message CreateUserRequest {
    string username     = 1 [(validate.rules).string = { min_len: 1, max_len: 100 }];
    string password     = 2 [(validate.rules).string = { min_len: 1, max_len: 100 }];
    string role_id      = 3 [(validate.rules).string = { min_len: 1, max_len: 100 }];
    string venue_id     = 4 [(validate.rules).string = { min_len: 1, max_len: 100 }];
    string first_name   = 5 [(validate.rules).string = { min_len: 1, max_len: 100 }];
    string last_name    = 6 [(validate.rules).string = { min_len: 1, max_len: 100 }];
    string phone_number = 7 [(validate.rules).string = { min_len: 1, max_len: 100 }];
    string middle_name  = 8 [(validate.rules).string = { min_len: 1, max_len: 100 }];
}

message GetUserRequest {
    string id = 1 [(validate.rules).string = { min_len: 1, max_len: 100 }];
}

message GetUserResponse {
    string id           = 1;
    string username     = 2;
    string role_id      = 3;
    string venue_id     = 4;
    string first_name   = 5;
    string last_name    = 6;
    string phone_number = 7;
    string middle_name  = 8;
    string created_at   = 9;
}

message UpdateUserRequest {
    string id           = 1;
    string username     = 2;
    string role_id      = 3;
    string venue_id     = 4;
    string first_name   = 5;
    string last_name    = 6;
    string phone_number = 7;
    string middle_name  = 8;
    string password     = 9;
}

message DeleteUserRequest {
    string id = 1 [(validate.rules).string = { min_len: 1, max_len: 100 }];
}

message ListUsersRequest {
    int32 page  = 1;
    int32 limit = 2;
}

message ListUsersResponse {
    repeated GetUserResponse users = 1;
    int32 total                    = 2;
}